eliminated weird spacing issue

--- a/css/hangman.css
+++ b/css/hangman.css
@@ -37,9 +37,9 @@ input
 
 .game-screen {
   background-color: rgba(241, 222, 217, 0.7);
-  border-radius: 1em;
-  padding: 1%;
-  margin: 3%;
+  border-radius: 15px;
+    margin: 1% 2% 0;
+    padding: 1% 0 0.5%;
   max-height: 500px;
   -webkit-box-shadow: 6px 6px 5px 0px rgba(0 , 0, 0, 0.8);
   -moz-box-shadow:    6px 6px 5px 0px rgba(0 , 0, 0, 0.8);
@@ -71,9 +71,7 @@ input:focus
 .content {
   background-color: rgba(2, 166, 238, 0.79);
   border-radius: 20px;
-  padding: 3%;
   margin-bottom: 5%;
-  margin-top: 1%;
   margin-left: 26%;
   width: 40%;
   max-height: 50%;
